--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -41,6 +41,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	font-feature-settings: 'liga', 'kern';
 	padding-top: var(--navbar-height);
+	background-color: var(--yellow);
 }
 
 html {
