--- a/app/assets/styles/_fonts.scss
+++ b/app/assets/styles/_fonts.scss
@@ -1,2 +1,1 @@
-//@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
-//@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Sans+Warang+Citi&display=swap');
