--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -42,6 +42,7 @@ body {
 	font-feature-settings: 'liga', 'kern';
 	padding-top: var(--navbar-height);
 	background-color: var(--yellow);
+	padding: 2rem;
 }
 
 html {
